@@ -2,6 +2,7 @@
 
 	* sample/QJulia/qjulia_clu.rb: Added.
 	* sample/Particle/gl_particle_animation_clu.rb: Added.
+	* sample/hello_clu.rb: Added.
 
 2015-11-17  vaiorabbit  <http://twitter.com/vaiorabbit>
 
